force-app/main/default/objects/Employee__c/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <displayFormat>APP-{0000}</displayFormat>
    <label>EMP_ID</label>
    <type>AutoNumber</type>
</CustomField>