force-app/main/default/objects/Employee__c/fields/Pay_scale__c.field-meta.xml
<CustomField>
    <fullName>Pay_scale__c</fullName>
    <label>Pay scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>