force-app/main/default/objects/Employee__c/fields/Previous_technologies__c.field-meta.xml
<CustomField>
    <fullName>Previous_technologies__c</fullName>
    <label>Previous technologies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>c++</fullName>
            </value>
            <value>
                <fullName>.net</fullName>
            </value>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>appian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>