force-app/main/default/objects/Employee__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Appian</fullName>
            </value>
            <value>
                <fullName>.net</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>