force-app/main/default/objects/Employee__c/recordTypes/not_working.recordType-meta.xml
<RecordType>
    <fullName>not_working</fullName>
    <active>false</active>
    <label>not working</label>
</RecordType>