force-app/main/default/objects/Employee__c/recordTypes/Working.recordType-meta.xml
<RecordType>
    <fullName>Working</fullName>
    <active>true</active>
    <label>Working</label>
</RecordType>